wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_defer_3.stderr
error: #[category(defer)] is not supported on unit variants.
  --> tests/derive_error_category/fail_on_invalid_defer_3.rs:12:5
   |
12 |     SingleStruct,
   |     ^^^^^^^^^^^^
